# lecture-demos

./: .gitignore  README.md  flights.sqlite3  pyproject.toml  week2-cs.ipynb  week3.ipynb  week4.ipynb  week5+6.ipynb
week1/: README.md  README.qmd
week3/: README.md  README.qmd
week4/: README.md  README.qmd
week4/data/: example.db
week5/: README.md  README.qmd
