[project]
name = "demo"
version = "0.1.0"
description = "This is a project which consists of lecture demos for the course Statistical Data Processing MT4007, given at Stockholm University, Sweden given in Autum 2025."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
